--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,36 +1,44 @@
-# -------- PyTorch (CUDA 12.4) — удалите блок, если наследуете системный torch --------
+# --- PyTorch (CUDA 12.4, Py3.11) ---
 --extra-index-url https://download.pytorch.org/whl/cu124
 torch==2.4.0+cu124
 torchvision==0.19.0+cu124
 torchaudio==2.4.0+cu124
 
-# -------- LLM / vLLM / HF экосистема --------
+# --- vLLM / Arctic-TILT ---
 vllm==0.8.3
+-e git+https://github.com/Snowflake-Labs/arctic-tilt@v0.8.3#egg=arctic-tilt
+
+# --- HF / токенизация ---
 huggingface_hub>=0.23
 tokenizers>=0.15,<0.20
 sentencepiece>=0.1.99
 tiktoken>=0.6
 
-# -------- OCR (PaddleOCR GPU; ONNX — опционально) --------
-paddlepaddle-gpu>=2.6.0
-paddleocr==2.7.0.3
-onnxruntime-gpu>=1.17,<1.19
+# --- OCR (GPU; PaddleOCR 3.x) ---
+paddlepaddle-gpu==2.6.1          # Py3.11 совместимая ветка
+paddleocr>=3.1,<4.0              # 3.x как и в CPU-профиле
+# onnxruntime-gpu 1.18 может требовать совместимости по CUDA;
+# если не нужен — лучше НЕ ставить:
+# onnxruntime-gpu==1.18.1
 
-# -------- Геометрия/изображения --------
-opencv-python>=4.9
+# --- Изображения / геометрия ---
+opencv-python>=4.9,<5.0
+Pillow>=10.2
 shapely>=2.0
 pyclipper>=1.3
 rapidfuzz>=3.0
 
-# -------- PDF/входы --------
+# --- PDF / входы ---
 pypdfium2>=4.20
 pdfminer.six>=20221105
 
-# -------- API/утилиты для дев-сервера --------
+# --- API / утилиты ---
 fastapi>=0.110
 uvicorn[standard]>=0.27
+httpx>=0.27
+python-multipart>=0.0.9
 pydantic>=2.5
 loguru>=0.7
 
-# -------- Базовые --------
+# --- Базовые ---
 numpy>=1.25,<3
