--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -1,30 +1,29 @@
 name: build-arctic-tilt
 on:
+  push: { branches: [ main ] }
   workflow_dispatch:
-  push:
-    branches: [ main ]
-    paths:
-      - Dockerfile
-      - entrypoint.sh
-      - .github/workflows/build-arctic-tilt.yml
 
 permissions:
   contents: read
-  packages: write    # нужно, чтобы пушить в GHCR
+  packages: write
+
+env:
+  REGISTRY: ghcr.io
+  OWNER_LC: ${{ toLower(github.repository_owner) }}   # <— всё строчными
+  IMAGE_NAME: arctic-tilt                             # <— любое имя, сразу в нижнем регистре
+  TAG: cu121-py310-v0.8.3
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
 
-      # Логин в GHCR встроенным GITHUB_TOKEN (никаких PAT не нужно)
       - uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -34,6 +33,6 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository }}/arctic-tilt:cu121-py310-v0.8.3
+          tags: ${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
