--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -1,33 +1,63 @@
 name: build-arctic-tilt
+
 on:
-  push: { branches: [ main ] }
+  push:
+    branches: [ main ]
+    paths:
+      - Dockerfile
+      - entrypoint.sh
+      - .github/workflows/build-arctic-tilt.yml
   workflow_dispatch:
 
 permissions:
   contents: read
   packages: write
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_TAG: cu121-py310-v0.8.3
+  IMAGE_NAME: ghcr.io/strachov/arctic-tilt:cu121-py310-v0.8.3
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
 
-      - uses: docker/login-action@v3
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Освободить место на диске (CUDA-образы тяжёлые)
+      - name: Free disk space on runner
+        uses: jlumbroso/free-disk-space@v1.3.1
         with:
-          registry: ghcr.io
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: false
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # Логин в GHCR встроенным GITHUB_TOKEN (секрет добавлять не нужно)
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: docker/build-push-action@v6
+      - name: Build and push image
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          # ← ВПИШИ СВОЙ НИК В НИЖНЕМ РЕГИСТРЕ
-          tags: ghcr.io/strachov/arctic-tilt:cu121-py310-v0.8.3
+          tags: ${{ env.IMAGE_NAME }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
