--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -13,37 +13,23 @@ permissions:
   contents: read
   packages: write
 
+concurrency:
+  group: build-arctic-tilt-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   REGISTRY: ghcr.io
-  IMAGE_TAG: cu121-py310-v0.8.3
-  IMAGE_NAME: ghcr.io/strachov/arctic-tilt:cu121-py310-v0.8.3
+  IMAGE_NAME: ghcr.io/strachov/arctic-tilt:cu124-py310-torch26-v0.8.3
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Освободить место на диске (CUDA-образы тяжёлые)
-      - name: Free disk space on runner
-        uses: jlumbroso/free-disk-space@v1.3.1
-        with:
-          tool-cache: true
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          swap-storage: false
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # Логин в GHCR встроенным GITHUB_TOKEN (секрет добавлять не нужно)
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
