--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -1,57 +1,41 @@
-name: build-arctic-tilt
+name: build-and-push
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-    paths:
-      - Dockerfile
-      - entrypoint.sh
-      - .github/workflows/build-arctic-tilt.yml
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  packages: write
-
-concurrency:
-  group: build-arctic-tilt-${{ github.ref }}
-  cancel-in-progress: true
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ghcr.io/strachov/arctic-tilt:cu124-py310-torch26-v0.8.3
+  IMAGE: ghcr.io/Strachov/arctic-tilt:cu124-py310-torch26-v0.8.3
+  VLLM_WHL_URL: https://github.com/STrachov/OCRlty/releases/download/tilt-vllm-cu124-py310-torch26/vllm-0.8.3-cp310-cp310-linux_x86_64.whl
+  VLLM_WHL_SHA256: c0f53b29a7c2b79a86d45fed8770b4164b46dfe5cda5bc4cd375bb86f3335811
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write   # для push в GHCR
+      contents: read
     steps:
       - uses: actions/checkout@v4
-      - name: Free disk space on runner
-        uses: jlumbroso/free-disk-space@v1.3.1
-        with:
-            tool-cache: true
-            android: true
-            dotnet: true
-            haskell: true
-            large-packages: true
-            swap-storage: false
+
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push image
+      - name: Build & Push
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ env.IMAGE_NAME }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: ${{ env.IMAGE }}
+          build-args: |
+            VLLM_WHL_URL=${{ env.VLLM_WHL_URL }}
+            VLLM_WHL_SHA256=${{ env.VLLM_WHL_SHA256 }}
