updated reqs, flow and context

--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -28,6 +28,9 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+ 
+      - name: Set DATE env (UTC)
+        run: echo "DATE=$(date -u +'%Y-%m-%d')" >> $GITHUB_ENV
 
       - name: Build & Push
         uses: docker/build-push-action@v6
@@ -35,7 +38,11 @@ jobs:
           context: .
           platforms: linux/amd64
           push: true
-          tags: ${{ env.IMAGE }}
+          tags:  |
+            ${{ env.IMAGE }}                               # твой "фиксированный" тег
+            ghcr.io/strachov/arctic-tilt:latest            # всегда последний билд
+            ghcr.io/strachov/arctic-tilt:${{ env.DATE }}-a1 # датированный тег (замени a1 при желании)
+            
           build-args: |
             VLLM_WHL_URL=${{ env.VLLM_WHL_URL }}
             VLLM_WHL_SHA256=${{ env.VLLM_WHL_SHA256 }}
