--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,5 +1,5 @@
 # -------------------- HF / vLLM stack --------------------
-# Жёсткая, совместимая пара, чтобы перекрыть системные и исключить падения
+# Совместимая пара, чтобы исключить конфликт с vLLM/transformers при импорте
 transformers==4.57.1
 tokenizers==0.23.0
 huggingface_hub>=0.23,<1.0
@@ -17,9 +17,10 @@ numpy>=1.25,<3
 pandas>=2.3,<3
 
 # -------------------- OCR / PDF --------------------
-# Не добавляем opencv-python: paddleocr притянет paddlex, который тянет opencv-contrib
+# НЕ добавляем opencv-python, чтобы не конфликтовать с contrib-сборкой
 paddlepaddle-gpu==2.6.1
 paddleocr>=3.3,<4.0
+opencv-contrib-python-headless==4.10.0.84
 pypdfium2>=5.0.0
 pdfminer.six==20250506
 shapely>=2.0
