--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -5,8 +5,14 @@ on:
   push:
     branches: [ main ]
 
+# не запускаем параллельно несколько билдов для main
+concurrency:
+  group: arctic-tilt-build-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
-  IMAGE: ghcr.io/strachov/arctic-tilt:cu124-py310-torch26-v0.8.3
+  IMAGE: ghcr.io/strachov/arctic-tilt:2025-10-31-a1
+  PLATFORMS: linux/amd64
   VLLM_WHL_URL: https://github.com/STrachov/OCRlty/releases/download/tilt-vllm-cu124-py310-torch26/vllm-0.8.3-cp310-cp310-linux_x86_64.whl
   VLLM_WHL_SHA256: c0f53b29a7c2b79a86d45fed8770b4164b46dfe5cda5bc4cd375bb86f3335811
 
@@ -14,13 +20,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      packages: write   # для push в GHCR
       contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
 
-      # - uses: docker/setup-qemu-action@v3
-      # - uses: docker/setup-buildx-action@v3
+      - name: Set build metadata
+        run: |
+          echo "DATE=$(date -u +'%Y-%m-%d')" >> $GITHUB_ENV
+          echo "GIT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -28,21 +36,27 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
- 
-      - name: Set DATE env (UTC)
-        run: echo "DATE=$(date -u +'%Y-%m-%d')" >> $GITHUB_ENV
+
+      # Явно поднимем buildx и включим кэш слоёв
+      - uses: docker/setup-buildx-action@v3
 
       - name: Build & Push
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64
+          pull: true
+          platforms: ${{ env.PLATFORMS }}
           push: true
-          tags:  |
+          tags: |
             ${{ env.IMAGE }}
-            ghcr.io/strachov/arctic-tilt:latest            
-            ghcr.io/strachov/arctic-tilt:${{ env.DATE }}-a1 
-            
+            ghcr.io/strachov/arctic-tilt:latest
+            ghcr.io/strachov/arctic-tilt:${{ env.DATE }}-${{ env.GIT_SHA }}
+          labels: |
+            org.opencontainers.image.source=${{ github.repositoryUrl }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.created=${{ env.DATE }}
           build-args: |
             VLLM_WHL_URL=${{ env.VLLM_WHL_URL }}
             VLLM_WHL_SHA256=${{ env.VLLM_WHL_SHA256 }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
