--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -14,7 +14,7 @@ pydantic>=2.5
 loguru>=0.7
 numpy>=1.25,<3
 pandas>=2.3,<3
-
+msgspec>=0.18,<0.20
 # -------------------- OCR / PDF --------------------
 paddlepaddle-gpu==2.6.1
 paddleocr>=3.3,<4.0
