--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -5,58 +5,56 @@ on:
   push:
     branches: [ main ]
 
-# не запускаем параллельно несколько билдов для main
-concurrency:
-  group: arctic-tilt-build-${{ github.ref }}
-  cancel-in-progress: true
+permissions:
+  contents: read
+  packages: write
 
 env:
-  IMAGE: ghcr.io/strachov/arctic-tilt:2025-10-31-a1
-  PLATFORMS: linux/amd64
-  VLLM_WHL_URL: https://github.com/STrachov/OCRlty/releases/download/tilt-vllm-cu124-py310-torch26/vllm-0.8.3-cp310-cp310-linux_x86_64.whl
-  VLLM_WHL_SHA256: c0f53b29a7c2b79a86d45fed8770b4164b46dfe5cda5bc4cd375bb86f3335811
+  IMAGE_NAME: arctic-tilt
+  IMAGE: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+  VLLM_WHEEL_URL: https://github.com/STrachov/OCRlty/releases/download/tilt-vllm-cu124-py310-torch26/vllm-0.8.3-cp310-cp310-linux_x86_64.whl
+  VLLM_WHEEL_SHA256: c0f53b29a7c2b79a86d45fed8770b4164b46dfe5cda5bc4cd375bb86f3335811
+
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Set build metadata
-        run: |
-          echo "DATE=$(date -u +'%Y-%m-%d-%H%M%S')" >> $GITHUB_ENV
-          echo "GIT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+      - name: Compute DATE tag
+        run: echo "DATE=$(date +%Y%m%d-%H%m%s)" >> $GITHUB_ENV
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      # Явно поднимем buildx и включим кэш слоёв
-      - uses: docker/setup-buildx-action@v3
 
       - name: Build & Push
         uses: docker/build-push-action@v6
         with:
           context: .
-          pull: true
-          platforms: ${{ env.PLATFORMS }}
+          file: Dockerfile
+          platforms: linux/amd64
           push: true
           tags: |
-            ${{ env.IMAGE }}
-            ghcr.io/strachov/arctic-tilt:latest
-            ghcr.io/strachov/arctic-tilt:${{ env.DATE }}
-          labels: |
-            org.opencontainers.image.source=${{ github.repositoryUrl }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.created=${{ env.DATE }}
+            ${{ env.IMAGE }}:latest
+            ${{ env.IMAGE }}:${{ env.DATE }}
           build-args: |
-            VLLM_WHL_URL=${{ env.VLLM_WHL_URL }}
-            VLLM_WHL_SHA256=${{ env.VLLM_WHL_SHA256 }}
+            VLLM_WHEEL_URL=${{ env.VLLM_WHEEL_URL }}
+            VLLM_WHEEL_SHA256=${{ env.VLLM_WHEEL_SHA256 }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
