--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,26 +1,27 @@
-# ---- HF / vLLM stack ----
-transformers>=4.43,<4.47
+# -------------------- HF / vLLM stack (кроме vLLM!) --------------------
+transformers==4.57.1
 tokenizers==0.22.1
 huggingface_hub>=0.23,<1.0
 sentencepiece>=0.1.99
 tiktoken>=0.6
 
-# ---- API / runtime ----
-fastapi==0.115.6
-uvicorn[standard]==0.30.6
-httpx==0.27.2
-python-multipart>=0.0.9,<0.1
-pydantic>=2.5,<3
-loguru>=0.7,<1
+# -------------------- API / runtime --------------------
+fastapi>=0.120,<1.0
+uvicorn[standard]>=0.38
+httpx>=0.28
+python-multipart>=0.0.9
+pydantic>=2.5
+loguru>=0.7
 numpy>=1.25,<3
 pandas>=2.3,<3
 msgspec>=0.18,<0.20
 
-# ---- OCR / PDF ----
+# -------------------- OCR / PDF --------------------
+paddlepaddle-gpu==2.6.1
 paddleocr>=3.3,<4.0
 opencv-contrib-python-headless==4.10.0.84
 pypdfium2>=5.0.0
-pdfminer.six>=20231228
+pdfminer.six==20250506
 shapely>=2.0
 pyclipper>=1.3
 rapidfuzz>=3.14
