--- a/.github/workflows/build-arctic-tilt.yml
+++ b/.github/workflows/build-arctic-tilt.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Compute DATE tag
-        run: echo "DATE=$(date +%Y%m%d-%H%M%S)" >> "$GITHUB_ENV"
+        run: echo "DATE=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_ENV
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
