--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -28,3 +28,14 @@ shapely>=2.0
 pyclipper>=1.3
 rapidfuzz>=3.14
 python-bidi==0.6.7
+
+# ---- vLLM runtime deps (wheel installed with --no-deps) ----
+cloudpickle>=2.2
+cachetools>=5.3
+diskcache>=5.6
+einops>=0.7
+pynvml>=11.5
+packaging>=24
+filelock>=3.12
+pyyaml>=6
+tqdm>=4.66
