--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -42,3 +42,13 @@ tqdm>=4.66
 pyzmq>=25,<26
 blake3>=0.3,<1
 openai>=1,<2
+aiohttp>=3.9,<4
+aiosignal>=1.3,<2
+async-timeout>=4,<5
+frozenlist>=1.4,<2
+multidict>=6,<7
+yarl>=1.9,<2
+
+# quality-of-life (обычно используются логгер/сериализация)
+rich>=13,<14
+orjson>=3.10,<4
