--- a/.github/workflows/build-xformers-wheel.yml
+++ b/.github/workflows/build-xformers-wheel.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
+     
       - name: Build xformers wheel inside PyTorch CUDA image
         run: |
           mkdir -p dist
@@ -27,19 +27,27 @@ jobs:
             pytorch/pytorch:2.6.0-cuda12.4-cudnn9-devel \
             bash -lc "
               set -e
-              apt-get update && apt-get install -y git ninja-build cmake python3.10-venv && rm -rf /var/lib/apt/lists/*
-              python -m venv /opt/venv
-              /opt/venv/bin/python -m pip install -U pip wheel setuptools ninja cmake packaging
-              /opt/venv/bin/python -m pip install --index-url https://download.pytorch.org/whl/cu124 torch==2.6.0
-
+      
+              apt-get update && apt-get install -y git ninja-build cmake python3.10-venv \
+                && rm -rf /var/lib/apt/lists/*
+      
+              # Важно: используем системные site-packages, где уже есть torch+CUDA
+              python -m venv /opt/venv --system-site-packages
+      
+              /opt/venv/bin/python -m pip install --no-cache-dir -U \
+                pip wheel setuptools ninja cmake packaging
+      
               export MAX_JOBS=4
               export FORCE_CUDA=1
-              export TORCH_CUDA_ARCH_LIST='80;86;89;90'
-
+              export TORCH_CUDA_ARCH_LIST='8.6'
+      
               git clone --depth=1 https://github.com/facebookresearch/xformers.git /tmp/xformers
               cd /tmp/xformers
-
+      
               /opt/venv/bin/python -m pip wheel -v . -w /dist
+      
+              # На всякий случай подчистим кэш pip, если он вдруг завёлся
+              rm -rf /root/.cache/pip || true
             "
 
       - name: Upload wheel as artifact
