--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,10 +1,4 @@
-# ВАЖНО:
-# - torch / torchvision / torchaudio НЕ указываем здесь:
-#   они устанавливаются отдельно (из базового образа или отдельным шагом).
-# - vLLM и xformers тоже НЕ указываем здесь:
-#   они ставятся отдельными wheel'ами из GitHub Release.
-
-# -------------------- HF / LLM stack (без torch/vllm/xformers) --------------------
+# -------------------- HF / vLLM stack --------------------
 transformers==4.57.1
 tokenizers==0.22.1
 huggingface_hub>=0.23,<1.0
@@ -12,35 +6,41 @@ sentencepiece>=0.1.99
 tiktoken>=0.6
 cachetools>=5,<6
 einops>=0.7
-safetensors>=0.4,<1
-accelerate>=0.33,<1  # опционально, но полезно для HF-моделей
 
 # -------------------- API / runtime --------------------
 fastapi>=0.120,<1.0
 uvicorn[standard]>=0.38
-starlette>=0.37,<1.0
 httpx>=0.28
 python-multipart>=0.0.9
-pydantic>=2.5,<3
-loguru>=0.7,<1
+pydantic>=2.5
+loguru>=0.7
+numpy>=1.25,<3
+pandas>=2.3,<3
+msgspec>=0.18,<0.20
 
-# -------------------- Numeric / data --------------------
-numpy>=1.26,<2.0
-scipy>=1.13,<2.0
-pandas>=2.1,<3.0
+# -------------------- OCR / PDF --------------------
+paddlepaddle-gpu==2.6.1
+paddleocr>=3.3,<4.0
+opencv-contrib-python-headless==4.10.0.84
+pypdfium2>=5.0.0
+pdfminer.six==20250506
+shapely>=2.0
+pyclipper>=1.3
+rapidfuzz>=3.14
+python-bidi==0.6.7
 
-# -------------------- CV / image utils --------------------
-pillow>=10,<11
-opencv-python-headless>=4.10,<5
-
-# -------------------- System / misc --------------------
-psutil>=5.9,<6
-pyyaml>=6.0,<7
-tqdm>=4.66,<5
+# ---- vLLM runtime deps (wheel installed with --no-deps) ----
+cloudpickle>=2.2
+cachetools>=5.3
+diskcache>=5.6
+einops>=0.7
+pynvml>=11.5
+packaging>=24
+filelock>=3.12
+pyyaml>=6
+tqdm>=4.66
 pyzmq>=25,<26
 blake3>=0.3,<1
-
-# -------------------- OpenAI / LLM client tooling --------------------
 openai>=1,<2
 aiohttp>=3.9,<4
 aiosignal>=1.3,<2
@@ -51,6 +51,6 @@ yarl>=1.9,<2
 gguf>=0.10,<1.0
 nvidia-ml-py>=12.560.30
 
-# -------------------- QoL --------------------
+# quality-of-life (обычно используются логгер/сериализация)
 rich>=13,<14
 orjson>=3.10,<4
