changeg aaproach in tilt_api

--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -17,6 +17,7 @@ loguru>=0.7
 numpy>=1.25,<3
 pandas>=2.3,<3
 msgspec>=0.18,<0.20
+Pillow>=10,<11
 
 # -------------------- OCR / PDF --------------------
 paddlepaddle>=2.6.2,<3.0
