--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -4,8 +4,7 @@ tokenizers==0.22.1
 huggingface_hub>=0.23,<1.0
 sentencepiece>=0.1.99
 tiktoken>=0.6
-cachetools>=5,<6
-einops>=0.7
+cachetools>=5.3,<6
 
 # -------------------- API / runtime --------------------
 fastapi>=0.120,<1.0
@@ -17,22 +16,25 @@ loguru>=0.7
 numpy>=1.25,<3
 pandas>=2.3,<3
 msgspec>=0.18,<0.20
-Pillow>=10,<11
 
-# -------------------- OCR / PDF --------------------
-paddlepaddle>=2.6.2,<3.0
-paddleocr>=3.3,<4.0
-opencv-contrib-python-headless==4.10.0.84
-pypdfium2>=5.0.0
-pdfminer.six==20250506
+# --- OCR (CPU; PaddleOCR 3.x) ---
+paddlepaddle==3.1.0 
+paddleocr==3.2.0 
+onnxruntime==1.18.1             # CPU (опционально для некоторых узлов)
+
+# --- Изображения / геометрия ---
+opencv-python-headless>=4.9,<4.12
+Pillow>=10.2,<11
 shapely>=2.0
 pyclipper>=1.3
-rapidfuzz>=3.14
-python-bidi==0.6.7
+rapidfuzz>=3.0
+
+# --- PDF / входы ---
+pypdfium2>=4.20
+pdfminer.six>=20221105
 
 # ---- vLLM runtime deps (wheel installed with --no-deps) ----
 cloudpickle>=2.2
-cachetools>=5.3
 diskcache>=5.6
 einops>=0.7
 pynvml>=11.5
