--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -20,6 +20,7 @@ msgspec>=0.18,<0.20
 # --- OCR (CPU; PaddleOCR 3.x) ---
 paddlepaddle==3.1.0 
 paddleocr==3.2.0 
+paddlex[ocr]>=3.2,<4.0          # нужен для PaddleOCR 3.2.0
 onnxruntime==1.18.1             # CPU (опционально для некоторых узлов)
 
 # --- Изображения / геометрия ---
